# 3d-engine

./: .gitignore  CMakeLists.txt  README.md
projects/base/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  model.cpp  model.h  sphere.cpp  sphere.h
projects/project0/: CMakeLists.txt  final.cpp  final.h  main.cpp  scene.cpp  scene.h  shading_tutorial.cpp  shading_tutorial.h
